--- a/.github/workflows/main_vegnerd.yml
+++ b/.github/workflows/main_vegnerd.yml
@@ -9,9 +9,6 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  AZURE_WEBAPP_PACKAGE_PATH: build
-
 jobs:
   build:
     runs-on: windows-latest
@@ -23,6 +20,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
+          cache: 'npm' # github actions can cache node_modules automatically to speed up the build 
 
       - name: npm install, build, and test
         run: |
@@ -30,11 +28,14 @@ jobs:
           npm run build --if-present
           npm run test --if-present
       
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -qr
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -56,4 +57,4 @@ jobs:
           app-name: 'Vegnerd'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E2B6DE24E375442ABF4200569532439D }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          package: release.zip
