--- a/.github/workflows/main_vegnerd.yml
+++ b/.github/workflows/main_vegnerd.yml
@@ -28,8 +28,12 @@ jobs:
           npm run build --if-present
           npm run test --if-present
       
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -qr
+      - name: Archive Release
+        uses: thedoctor0/zip-release@master
+        with:
+          type: 'zip'
+          filename: 'release.zip'
+          exclusions: '*.git* /*node_modules/* .editorconfig'
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
