--- a/.github/workflows/main_vegnerd.yml
+++ b/.github/workflows/main_vegnerd.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           type: 'zip'
           filename: 'release.zip'
-          path: .
+          path: build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
