--- a/.github/workflows/main_vegnerd.yml
+++ b/.github/workflows/main_vegnerd.yml
@@ -23,7 +23,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-          cache: 'npm' # github actions can cache node_modules automatically to speed up the build 
 
       - name: npm install, build, and test
         run: |
@@ -36,7 +35,7 @@ jobs:
         with:
           type: 'zip'
           filename: 'release.zip'
-          path: build
+          path: .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -57,6 +56,11 @@ jobs:
         with:
           name: node-app
 
+      - name: Unzip artifact for deployment
+        run: |
+          unzip -q release.zip
+          rm release.zip
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
@@ -64,4 +68,4 @@ jobs:
           app-name: 'Vegnerd'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E2B6DE24E375442ABF4200569532439D }}
-          package: release.zip
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
